k8s_manifests/02-backend_svc_depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: api  # name of the service
  labels:
    app: api  # the service monitor looks for this label
spec:
  selector:
    app: api  # the pod with the name - api will be contacted
  ports:
    - protocol: TCP
      name: http-metrics  # naming the port so that prometheus knows which pod to scrape
      port: 8000
      targetPort: 8000  # must match the container port in the deployment section since this is the port inside the container where the fast api is listening

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: backend-api
        # pinning the last stable commit
        image: ghcr.io/ritishadhikari/topic_to_content-api:sha-dcd084b
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
