k8s_manifests/03-frontend_svc_depl.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8501  # the port ouside (external)
      targetPort: 8501  # the port inside the container
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-ui
          # pinning the last stable commit
          image: ghcr.io/ritishadhikari/topic_to_content-ui:sha-dcd084b
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
