k8s_manifests/10-canary-backend_svc_depl.yaml
# CANARY BACKEND (v2)

apiVersion: v1
kind: Service
metadata:
  name: api-canary
  labels:
    app: api-canary  # the service monitor looks for this label
spec: 
  selector:
    app: api-canary  # the pod with the name - api-canary will be contacted
  ports:
    - protocol: TCP
      name: http-metrics
      port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-canary
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: api-canary
  template:
    metadata:
      labels: 
        app: api-canary
    spec:
      containers: 
      - name: backend-api
        image: ghcr.io/ritishadhikari/topic_to_content-api:v2-canary
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 3
