k8s_manifests/11-canary-frontend_scv_depl.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
spec:
  selector:
    app: frontend-canary
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501

---

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-canary
    spec:
      containers:
        - name: frontend
          image: ghcr.io/ritishadhikari/topic_to_content-ui:v2-canary
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
