k8s_manifests/04-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata: 
#   name: khudse-ingress
#   annotations:
#     # explicitly telling K3s to use its built-in Traefik proxy
#     ingressClassName: "traefik"
#     # this annotation will trigger cert-manager to issue an https certificate from the letsencrypt website
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec: 
#   tls:
#   - hosts:
#         # Tells the ingress to generate an HTTPS certificate for this specific domain
#       - khudse.duckdns.org  
#     # Cert Manager will safely store the keys in this secret0
#     secretName: khudse-frontend-tls  
#   rules:
#     # be very specific to the domain name
#   - host: khudse.duckdns.org
#     http:
#       paths:
#       - path: /
#         pathType: Prefix  # alternate is EXACT
#         backend: 
#           service:
#             name: frontend
#             port:
#               number: 8501

---
# an ingress is a set of rules that exposes these internal services to the outside public internet
# Without this file, your Grafana dashboard would be completely inaccessible from the outside world. 
# This file secures the connection with automated SSL and routes the public traffic to the correct internal analytics server.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring  # must live in the same namespace as the engine - prometheus and grafana
  annotations:
    ingressClassName: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # refer to 09-cert-issuer.yaml which is accountable to providing the certficate
spec:
  tls:
  - hosts: 
    - grafana.khudse.duckdns.org
    secretName: grafana-tls
  rules:
  # Using a wildcard DNS routing trick for AWS EC2 testing
  - host: grafana.khudse.duckdns.org  # grafana.3.7.249.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: khudse-backend-monitor-grafana  # refer to 05-monitoring.yaml file where the repo got installed in the name of khudse-backend-monitor and grafana is appended
            port:
              number: 80
